Move text about specific studies to Related Work. #42

--- a/publications/dora_outlier_detection_iaai.tex
+++ b/publications/dora_outlier_detection_iaai.tex
@@ -203,22 +203,8 @@ sets is of interest for a wide variety of scientific domains. Depending on the
     to guide instrument acquisition or scientific analysis. Another application
    is the detection of rare objects that are known to exist but the known
    examples are too few to create a large enough labeled dataset for 
-   supervised classification algorithms. In astrophysics, 
-    outlier detection methods have been employed for identifying astrophysical
-     objects with unique characteristics (Xiong et al., 2010; 
-     Storey-Fisher et al., 2020; Hayat et al., 2020) as well as 
-     data/modeling artifacts (Wagstaff et al., 2020; Lochner et al., 2020) in 
-     astronomical surveys. Examples of outlier detection applications in 
-     Earth science include detecting anomalous objects or materials 
-     (Chang and Chiang, 2002; Zhou et al., 2016), data artifacts/noise 
-     (Liu et al., 2017; Alvera-Azcárate et al., 2012), change (Touati et al.,
-      2020; Zhou et al., 2016),  and ocean extremes (Prochaska et al.). 
-      Planetary science applications of outlier detection have mostly focused 
-      on prioritizing samples with novel geologic or geochemical features for
-       follow-up targeting or analysis (Kerner et al., 2020a; Kerner et al., 
-       2020b; Wagstaff et al., 2013). 
-       
-Despite wide differences in applications, data types, and dimensionality,
+   supervised classification algorithms. 
+  Despite wide differences in applications, data types, and dimensionality,
  the same underlying machine learning algorithms can be employed across 
  all of these domains. A challenge for applying them however is that domain
  scientists do not always have the programming or machine learning background
@@ -248,6 +234,21 @@ or feature vector input data types and outlier detection methods that include
       for Mars rovers (planetary science). [We showed that ...]
 
 \section{Related Work}
+In astrophysics, 
+    outlier detection methods have been employed for identifying astrophysical
+     objects with unique characteristics (Xiong et al., 2010; 
+     Storey-Fisher et al., 2020; Hayat et al., 2020) as well as 
+     data/modeling artifacts (Wagstaff et al., 2020; Lochner et al., 2020) in 
+     astronomical surveys. Examples of outlier detection applications in 
+     Earth science include detecting anomalous objects or materials 
+     (Chang and Chiang, 2002; Zhou et al., 2016), data artifacts/noise 
+     (Liu et al., 2017; Alvera-Azcárate et al., 2012), change (Touati et al.,
+      2020; Zhou et al., 2016),  and ocean extremes (Prochaska et al.). 
+      Planetary science applications of outlier detection have mostly focused 
+      on prioritizing samples with novel geologic or geochemical features for
+       follow-up targeting or analysis (Kerner et al., 2020a; Kerner et al., 
+       2020b; Wagstaff et al., 2013). 
+
 \begin{itemize}
 \item Methods for outlier detection
 \item Applications of outlier detection related to our focus domains 
