Add references for DES anomaly and DEMUD papers. (#42)

--- a/publications/dora_outlier_detection_iaai.tex
+++ b/publications/dora_outlier_detection_iaai.tex
@@ -238,7 +238,7 @@ In astrophysics,
     outlier detection methods have been employed for identifying astrophysical
      objects with unique characteristics (Xiong et al., 2010; 
      Storey-Fisher et al., 2020; Hayat et al., 2020) as well as 
-     data/modeling artifacts (Wagstaff et al., 2020; Lochner et al., 2020) in 
+     data/modeling artifacts~\citep{wagstaff:des-anom20} (Lochner et al., 2020) in 
      astronomical surveys. Examples of outlier detection applications in 
      Earth science include detecting anomalous objects or materials 
      (Chang and Chiang, 2002; Zhou et al., 2016), data artifacts/noise 
@@ -247,7 +247,7 @@ In astrophysics,
       Planetary science applications of outlier detection have mostly focused 
       on prioritizing samples with novel geologic or geochemical features for
        follow-up targeting or analysis (Kerner et al., 2020a; Kerner et al., 
-       2020b; Wagstaff et al., 2013). 
+       2020b) \citep{wagstaff:demud13}.
 
 \begin{itemize}
 \item Methods for outlier detection
