--- a/publications/dora_references.bib
+++ b/publications/dora_references.bib
@@ -1,3 +1,11 @@
+@InProceedings{wagstaff:demud13,
+  author =       {Kiri L.~Wagstaff and Nina L.~Lanza and David R.~Thompson and Thomas G.~Dietterich and Martha S.~Gilmore},
+  title =        {Guiding Scientific Discovery with Explanations using {DEMUD} },
+  booktitle = {Proceedings of the Twenty-Seventh Conference on Artificial Intelligence},
+  pages =     {905--911},
+  year =      {2013},
+}
+
 @article{kerner2020comparison,
   title={Comparison of novelty detection methods for multispectral images in rover-based planetary exploration missions},
   author={Kerner, Hannah R and Wagstaff, Kiri L and Bue, Brian D and Wellington, Danika F and Jacob, Samantha and Horton, Paul and Bell, James F and Kwan, Chiman and Amor, Heni Ben},
@@ -8,3 +16,12 @@
   year={2020},
   publisher={Springer}
 }
+
+@InProceedings{wagstaff:des-anom20,
+  author =       {Kiri L. Wagstaff and Eric Huff and Umaa Rebbapragada},
+  title =        {Machine-assisted discovery through identification and explanation of anomalies in astronomical surveys}, 
+  booktitle = {Proceedings of the Astronomical Data Analysis Software and Systems Conference},
+  year =      {2020},
+  OPTpages =     {},
+}
+
