Add reference to PyOD. (#42)

--- a/publications/dora_outlier_detection_iaai.tex
+++ b/publications/dora_outlier_detection_iaai.tex
@@ -253,7 +253,10 @@ In astrophysics,
 \item Methods for outlier detection
 \item Applications of outlier detection related to our focus domains 
 (e.g., \citet{kerner2020comparison})
-\item Tools for applying outlier detection or other methods across domains?
+\item Outlier detection toolkits: PyOD Python
+package~\citep{zhao:pyod19}, \url{https://github.com/yzhao062/pyod} 
+\item Tools for applying outlier detection or other methods across
+domains?
 \end{itemize}
 
 \section{Methods}
