--- a/publications/dora_references.bib
+++ b/publications/dora_references.bib
@@ -6,6 +6,17 @@
   year =      {2013},
 }
 
+@article{zhao:pyod19,
+  author  = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
+  title   = {PyOD: A Python toolbox for scalable outlier detection},
+  journal = {Journal of Machine Learning Research},
+  year    = {2019},
+  volume  = {20},
+  number  = {96},
+  pages   = {1-7},
+  url     = {http://jmlr.org/papers/v20/19-011.html}
+}
+
 @article{kerner2020comparison,
   title={Comparison of novelty detection methods for multispectral images in rover-based planetary exploration missions},
   author={Kerner, Hannah R and Wagstaff, Kiri L and Bue, Brian D and Wellington, Danika F and Jacob, Samantha and Horton, Paul and Bell, James F and Kwan, Chiman and Amor, Heni Ben},
