--- a/publications/dora_outlier_detection_iaai.tex
+++ b/publications/dora_outlier_detection_iaai.tex
@@ -74,6 +74,10 @@
 
 \setcounter{secnumdepth}{0} %May be changed to 1 or 2 if section numbers are desired.
 
+\usepackage{siunitx}
+\usepackage[dvipsnames]{xcolor}
+\newcommand{\todo}[1]{\textcolor{blue}{#1}}
+
 % The file aaai21.sty is the style file for AAAI Press
 % proceedings, working notes, and technical reports.
 %
@@ -269,7 +273,7 @@ visualization modules can easily be added and integrated if they follow the API.
 Hannah to add architecture figure. Add descriptions of each layer of modules: 
 \paragraph{Data types} Hannah
 \paragraph{Feature extraction} Hannah 
-\paragraph{Ranking algorithms} We implemented 7 algorithms for scoring and 
+\paragraph{Ranking algorithms.} We implemented 7 algorithms for scoring and 
 ranking samples by outlierness. [Describe each algorithm briefly and how they 
 complement each other.]
 
@@ -297,8 +301,23 @@ Describe the datasets overall and our motivation for choosing these. Maybe add
 \subsubsection{Astrophysical objects in Dark Energy Survey}
 Umaa
 
-\subsubsection{Targets in Mars rover images}
-Kiri
+\subsubsection{Targets in Mars rover images.}
+Mars exploration is fundamentally an exercise in discovery with the
+goal of increasing our understanding of the history, evolution,
+composition, and currently active processes on Mars.  Outliers
+identified in Mars observations can inspire new discoveries and inform
+the choice of which areas merit follow-up, deeper
+investigation~\cite{kerner2020comparison,wagstaff:rover-novelty20}.
+We collected \todo{XXX} images from the Mars Science Laboratory's
+Navigation camera (Navcam) and employed the Rockster~\cite{burl:rockster16}
+method used by onboard rover software to identify candidate rock
+targets with an area of at least 100 pixels, yielding \num{6005}
+targets.  We cropped out a \num{64}$\times$\num{64} pixel image
+centered on each target.
+%
+We collaborated with an MSL science planning team member to
+independently review the targets and identify those that were
+considered novel by the mission ($n_{novel} = 108$).
 
 \subsubsection{Satellite time series for ground-truth observations}
 Hannah: Describe the Earth crop field data set and applications
@@ -319,9 +338,9 @@ each dataset then the results from the experiments.
 \subsubsection{Astrophysical objects in Dark Energy Survey}
 Umaa
 
-\subsubsection{Targets in Mars rover images}
+\subsubsection{Targets in Mars rover images.}
 Kiri
-
+% and organized them chronologically.
 \subsubsection{Satellite time series for ground-truth observations}
 Hannah: Describe the Earth crop field data set and applications
 
@@ -349,11 +368,20 @@ pip-installable package
 \bibliography{dora_references}
 
 
-\section{ Acknowledgments}
-Funding/support: JPL CIF, SMD etc. Acknowledge people who contributed to 
-datasets e.g. FAO, Matt Pritchard, DES, other CIF team members?
+\section{Acknowledgments}
+\todo{Funding/support: JPL CIF, SMD etc.}
+We thank the NASA Center Innovation Fund for supporting this work.
 
+\todo{Acknowledge people who contributed to 
+datasets e.g. FAO, Matt Pritchard, DES, other CIF team members?}
 
+We thank Raymond Francis for analyzing the Navcam rover images to
+identify targets considered to be ``novel'' for evaluating outlier
+detection in the planetary rover scenario.
+
+Part of this research was carried out at the Jet Propulsion
+Laboratory, California Institute of Technology, under a contract with
+the National Aeronautics and Space Administration.
 
 \end{document}
 
