Add references for Rockster and i-SAIRAS 2020 CIF paper. (#42)

--- a/publications/dora_references.bib
+++ b/publications/dora_references.bib
@@ -6,6 +6,15 @@
   year =      {2013},
 }
 
+@Article{burl:rockster16,
+  author =       {Michael C. Burl and David R. Thompson and Charles deGranville and Benjamin J. Bornstein},
+  title =        {Rockster: Onboard rock segmentation through edge regrouping},
+  journal =      {Journal of Aerospace Information Systems},
+  year =         {2016},
+  volume =    {13},
+  pages =     {329--342},
+}
+
 @article{zhao:pyod19,
   author  = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
   title   = {PyOD: A Python toolbox for scalable outlier detection},
@@ -34,5 +43,12 @@
   booktitle = {Proceedings of the Astronomical Data Analysis Software and Systems Conference},
   year =      {2020},
   OPTpages =     {},
+}
+
+@InProceedings{wagstaff:rover-novelty20,
+  author =       {Kiri L. Wagstaff and Raymond Francis and Hannah Kerner and Steven Lu and Favour Nerrise and James F. Bell III and Gary Doran and Umaa Rebbapragada},
+  title =        {Novelty-driven onboard targeting for Mars rovers},
+  booktitle = {Proceedings of the International Symposium on Artificial Intelligence, Robotics and Automation in Space},
+  year =      {2020},
 }
 
