--- a/publications/dora_references.bib
+++ b/publications/dora_references.bib
@@ -52,3 +52,18 @@
   year =      {2020},
 }
 
+@inproceedings{tseng2021learning,
+  title={Learning To Predict Crop Type From Heterogeneous Sparse Labels Using Meta-Learning},
+  author={Tseng, Gabriel and Kerner, Hannah and Nakalembe, Catherine and Becker-Reshef, Inbal},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={1111--1120},
+  year={2021}
+}
+
+@Misc{planetdata,
+  author =    "Planet Team",
+  organization = {Planet},
+  title =     {Planet Application Program Interface: In Space for Life on Earth},
+  year =      {2018--},
+  url = "https://api.planet.com"
+}
